# scan-to-ebook

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: agents.md  architecture.md  operations.md  product-overview.md  user-guide.md
docs/journals/: context-prepass-completion-and-recovery-260607.md  manga-automation-auto-cover-and-clean-room-validation-260609.md  manga-pipeline-launch-and-ordering-regression-fix-260609.md  prose-pipeline-run-history-and-automation-maturity-260609.md  ux-improvements-p0-p1-implementation-260607.md
plans/260608-1954-ocr-model-benchmark/: report-namphong-bench.md  report.md  run_benchmark.py
samples/: README.md  aragong-q1-quarter-38pages.epub  aragong-q1-quarter-38pages.md  aragong-q1-quarter-context.md  ke-nam-vung-20pages.epub  tho-ngu-ngon-la-fontaine-20pages.epub  truong-hoc-don-ba-20pages.epub
src/scan_to_ebook/: __init__.py  archive_extract.py  cli.py  context_prepass.py  doctor.py  drive_download.py  drive_input.py  drive_upload.py  epub3_fixed_layout.py  epub3_validate.py  ocr.py  (+9 more)
tests/: conftest.py  test_archive_extract.py  test_cli_ux_helpers.py  test_context_prepass.py  test_cover_resolution.py  test_doctor.py  test_drive_folder_and_any.py  test_drive_input.py  test_drive_url.py  test_epub3_fixed_layout.py  test_heic_import.py  test_json_output.py  test_lang_prompt_selection.py  test_manga_cover_detect.py  test_manga_integration.py  test_metadata_backfill.py  test_mobi_extract.py  test_output_paths.py  test_page_order_and_retry.py  test_pdf_import.py  test_post_process_and_blank.py  test_smoke_gate.py
